# actix-htmx-askama-sqlx

./: .gitignore  Cargo.toml  docker-compose.yml  env.sample  package-lock.json  package.json  readme.md  tailwind.config.js
migrations/: 20231105084739_inititial_migration.sql  20231110215842_create_userdatabase.sql  20231111064146_update_userdatabase.sql
public/: toast.js
src/: main.rs
src/handler/: common.rs  mod.rs  todo.rs  user.rs
src/model/: mod.rs  todo.rs  user.rs
src/utils/: form.rs  mod.rs  view.rs
src/view/: todo.rs  user.rs
templates/: base.html  hello.html  register_form.html  todo_index.html  todo_list.html  todo_list_item_edit.html
