[package]
name = "actix-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
askama = "0.12.1"
askama_actix = "0.14.0"
actix-files = "0.6.2"